qt/network/gen_qsslsocket.nim


proc fcQSslSocket_new(): ptr cQSslSocket {.importc: "QSslSocket_new".}
proc fcQSslSocket_new2(parent: pointer): ptr cQSslSocket {.importc: "QSslSocket_new2".}
proc fcQSslSocket_metaObject(self: pointer, ): pointer {.importc: "QSslSocket_metaObject".}
proc fcQSslSocket_metacast(self: pointer, param1: cstring): pointer {.importc: "QSslSocket_metacast".}
proc fcQSslSocket_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QSslSocket_metacall".}
proc fcQSslSocket_tr(s: cstring): struct_miqt_string {.importc: "QSslSocket_tr".}
proc fcQSslSocket_trUtf8(s: cstring): struct_miqt_string {.importc: "QSslSocket_trUtf8".}
proc fcQSslSocket_resume(self: pointer, ): void {.importc: "QSslSocket_resume".}
proc fcQSslSocket_connectToHostEncrypted(self: pointer, hostName: struct_miqt_string, port: cushort): void {.importc: "QSslSocket_connectToHostEncrypted".}
proc fcQSslSocket_connectToHostEncrypted2(self: pointer, hostName: struct_miqt_string, port: cushort, sslPeerName: struct_miqt_string): void {.importc: "QSslSocket_connectToHostEncrypted2".}
proc fcQSslSocket_setSocketDescriptor(self: pointer, socketDescriptor: uint, state: cint, openMode: cint): bool {.importc: "QSslSocket_setSocketDescriptor".}
proc fcQSslSocket_connectToHost(self: pointer, hostName: struct_miqt_string, port: cushort, openMode: cint, protocol: cint): void {.importc: "QSslSocket_connectToHost".}
proc fcQSslSocket_disconnectFromHost(self: pointer, ): void {.importc: "QSslSocket_disconnectFromHost".}
proc fcQSslSocket_setSocketOption(self: pointer, option: cint, value: pointer): void {.importc: "QSslSocket_setSocketOption".}
proc fcQSslSocket_socketOption(self: pointer, option: cint): pointer {.importc: "QSslSocket_socketOption".}
proc fcQSslSocket_mode(self: pointer, ): cint {.importc: "QSslSocket_mode".}
proc fcQSslSocket_isEncrypted(self: pointer, ): bool {.importc: "QSslSocket_isEncrypted".}
proc fcQSslSocket_protocol(self: pointer, ): cint {.importc: "QSslSocket_protocol".}
proc fcQSslSocket_setProtocol(self: pointer, protocol: cint): void {.importc: "QSslSocket_setProtocol".}
proc fcQSslSocket_peerVerifyMode(self: pointer, ): cint {.importc: "QSslSocket_peerVerifyMode".}
proc fcQSslSocket_setPeerVerifyMode(self: pointer, mode: cint): void {.importc: "QSslSocket_setPeerVerifyMode".}
proc fcQSslSocket_peerVerifyDepth(self: pointer, ): cint {.importc: "QSslSocket_peerVerifyDepth".}
proc fcQSslSocket_setPeerVerifyDepth(self: pointer, depth: cint): void {.importc: "QSslSocket_setPeerVerifyDepth".}
proc fcQSslSocket_peerVerifyName(self: pointer, ): struct_miqt_string {.importc: "QSslSocket_peerVerifyName".}
proc fcQSslSocket_setPeerVerifyName(self: pointer, hostName: struct_miqt_string): void {.importc: "QSslSocket_setPeerVerifyName".}
proc fcQSslSocket_bytesAvailable(self: pointer, ): clonglong {.importc: "QSslSocket_bytesAvailable".}
proc fcQSslSocket_bytesToWrite(self: pointer, ): clonglong {.importc: "QSslSocket_bytesToWrite".}
proc fcQSslSocket_canReadLine(self: pointer, ): bool {.importc: "QSslSocket_canReadLine".}
proc fcQSslSocket_close(self: pointer, ): void {.importc: "QSslSocket_close".}
proc fcQSslSocket_atEnd(self: pointer, ): bool {.importc: "QSslSocket_atEnd".}
proc fcQSslSocket_flush(self: pointer, ): bool {.importc: "QSslSocket_flush".}
proc fcQSslSocket_abort(self: pointer, ): void {.importc: "QSslSocket_abort".}
proc fcQSslSocket_setReadBufferSize(self: pointer, size: clonglong): void {.importc: "QSslSocket_setReadBufferSize".}
proc fcQSslSocket_encryptedBytesAvailable(self: pointer, ): clonglong {.importc: "QSslSocket_encryptedBytesAvailable".}
proc fcQSslSocket_encryptedBytesToWrite(self: pointer, ): clonglong {.importc: "QSslSocket_encryptedBytesToWrite".}
proc fcQSslSocket_sslConfiguration(self: pointer, ): pointer {.importc: "QSslSocket_sslConfiguration".}
proc fcQSslSocket_setSslConfiguration(self: pointer, config: pointer): void {.importc: "QSslSocket_setSslConfiguration".}
proc fcQSslSocket_setLocalCertificateChain(self: pointer, localChain: struct_miqt_array): void {.importc: "QSslSocket_setLocalCertificateChain".}
proc fcQSslSocket_localCertificateChain(self: pointer, ): struct_miqt_array {.importc: "QSslSocket_localCertificateChain".}
proc fcQSslSocket_setLocalCertificate(self: pointer, certificate: pointer): void {.importc: "QSslSocket_setLocalCertificate".}
proc fcQSslSocket_setLocalCertificateWithFileName(self: pointer, fileName: struct_miqt_string): void {.importc: "QSslSocket_setLocalCertificateWithFileName".}
proc fcQSslSocket_localCertificate(self: pointer, ): pointer {.importc: "QSslSocket_localCertificate".}
proc fcQSslSocket_peerCertificate(self: pointer, ): pointer {.importc: "QSslSocket_peerCertificate".}
proc fcQSslSocket_peerCertificateChain(self: pointer, ): struct_miqt_array {.importc: "QSslSocket_peerCertificateChain".}
proc fcQSslSocket_sessionCipher(self: pointer, ): pointer {.importc: "QSslSocket_sessionCipher".}
proc fcQSslSocket_sessionProtocol(self: pointer, ): cint {.importc: "QSslSocket_sessionProtocol".}
proc fcQSslSocket_ocspResponses(self: pointer, ): struct_miqt_array {.importc: "QSslSocket_ocspResponses".}
proc fcQSslSocket_setPrivateKey(self: pointer, key: pointer): void {.importc: "QSslSocket_setPrivateKey".}
proc fcQSslSocket_setPrivateKeyWithFileName(self: pointer, fileName: struct_miqt_string): void {.importc: "QSslSocket_setPrivateKeyWithFileName".}
proc fcQSslSocket_privateKey(self: pointer, ): pointer {.importc: "QSslSocket_privateKey".}
proc fcQSslSocket_ciphers(self: pointer, ): struct_miqt_array {.importc: "QSslSocket_ciphers".}
proc fcQSslSocket_setCiphers(self: pointer, ciphers: struct_miqt_array): void {.importc: "QSslSocket_setCiphers".}
proc fcQSslSocket_setCiphersWithCiphers(self: pointer, ciphers: struct_miqt_string): void {.importc: "QSslSocket_setCiphersWithCiphers".}
proc fcQSslSocket_setDefaultCiphers(ciphers: struct_miqt_array): void {.importc: "QSslSocket_setDefaultCiphers".}
proc fcQSslSocket_defaultCiphers(): struct_miqt_array {.importc: "QSslSocket_defaultCiphers".}
proc fcQSslSocket_supportedCiphers(): struct_miqt_array {.importc: "QSslSocket_supportedCiphers".}
proc fcQSslSocket_addCaCertificates(self: pointer, path: struct_miqt_string): bool {.importc: "QSslSocket_addCaCertificates".}
proc fcQSslSocket_addCaCertificate(self: pointer, certificate: pointer): void {.importc: "QSslSocket_addCaCertificate".}
proc fcQSslSocket_addCaCertificatesWithCertificates(self: pointer, certificates: struct_miqt_array): void {.importc: "QSslSocket_addCaCertificatesWithCertificates".}
proc fcQSslSocket_setCaCertificates(self: pointer, certificates: struct_miqt_array): void {.importc: "QSslSocket_setCaCertificates".}
proc fcQSslSocket_caCertificates(self: pointer, ): struct_miqt_array {.importc: "QSslSocket_caCertificates".}
proc fcQSslSocket_addDefaultCaCertificates(path: struct_miqt_string): bool {.importc: "QSslSocket_addDefaultCaCertificates".}
proc fcQSslSocket_addDefaultCaCertificate(certificate: pointer): void {.importc: "QSslSocket_addDefaultCaCertificate".}
proc fcQSslSocket_addDefaultCaCertificatesWithCertificates(certificates: struct_miqt_array): void {.importc: "QSslSocket_addDefaultCaCertificatesWithCertificates".}
proc fcQSslSocket_setDefaultCaCertificates(certificates: struct_miqt_array): void {.importc: "QSslSocket_setDefaultCaCertificates".}
proc fcQSslSocket_defaultCaCertificates(): struct_miqt_array {.importc: "QSslSocket_defaultCaCertificates".}
proc fcQSslSocket_systemCaCertificates(): struct_miqt_array {.importc: "QSslSocket_systemCaCertificates".}
proc fcQSslSocket_waitForConnected(self: pointer, msecs: cint): bool {.importc: "QSslSocket_waitForConnected".}
proc fcQSslSocket_waitForEncrypted(self: pointer, ): bool {.importc: "QSslSocket_waitForEncrypted".}
proc fcQSslSocket_waitForReadyRead(self: pointer, msecs: cint): bool {.importc: "QSslSocket_waitForReadyRead".}
proc fcQSslSocket_waitForBytesWritten(self: pointer, msecs: cint): bool {.importc: "QSslSocket_waitForBytesWritten".}
proc fcQSslSocket_waitForDisconnected(self: pointer, msecs: cint): bool {.importc: "QSslSocket_waitForDisconnected".}
proc fcQSslSocket_sslErrors(self: pointer, ): struct_miqt_array {.importc: "QSslSocket_sslErrors".}
proc fcQSslSocket_sslHandshakeErrors(self: pointer, ): struct_miqt_array {.importc: "QSslSocket_sslHandshakeErrors".}
proc fcQSslSocket_supportsSsl(): bool {.importc: "QSslSocket_supportsSsl".}
proc fcQSslSocket_sslLibraryVersionNumber(): clong {.importc: "QSslSocket_sslLibraryVersionNumber".}
proc fcQSslSocket_sslLibraryVersionString(): struct_miqt_string {.importc: "QSslSocket_sslLibraryVersionString".}
proc fcQSslSocket_sslLibraryBuildVersionNumber(): clong {.importc: "QSslSocket_sslLibraryBuildVersionNumber".}
proc fcQSslSocket_sslLibraryBuildVersionString(): struct_miqt_string {.importc: "QSslSocket_sslLibraryBuildVersionString".}
proc fcQSslSocket_ignoreSslErrors(self: pointer, errors: struct_miqt_array): void {.importc: "QSslSocket_ignoreSslErrors".}
proc fcQSslSocket_startClientEncryption(self: pointer, ): void {.importc: "QSslSocket_startClientEncryption".}
proc fcQSslSocket_startServerEncryption(self: pointer, ): void {.importc: "QSslSocket_startServerEncryption".}
proc fcQSslSocket_ignoreSslErrors2(self: pointer, ): void {.importc: "QSslSocket_ignoreSslErrors2".}
proc fcQSslSocket_encrypted(self: pointer, ): void {.importc: "QSslSocket_encrypted".}
proc fQSslSocket_connect_encrypted(self: pointer, slot: int) {.importc: "QSslSocket_connect_encrypted".}
proc fcQSslSocket_peerVerifyError(self: pointer, error: pointer): void {.importc: "QSslSocket_peerVerifyError".}
proc fQSslSocket_connect_peerVerifyError(self: pointer, slot: int) {.importc: "QSslSocket_connect_peerVerifyError".}
proc fcQSslSocket_sslErrorsWithErrors(self: pointer, errors: struct_miqt_array): void {.importc: "QSslSocket_sslErrorsWithErrors".}
proc fQSslSocket_connect_sslErrorsWithErrors(self: pointer, slot: int) {.importc: "QSslSocket_connect_sslErrorsWithErrors".}
proc fcQSslSocket_modeChanged(self: pointer, newMode: cint): void {.importc: "QSslSocket_modeChanged".}
proc fQSslSocket_connect_modeChanged(self: pointer, slot: int) {.importc: "QSslSocket_connect_modeChanged".}
proc fcQSslSocket_encryptedBytesWritten(self: pointer, totalBytes: clonglong): void {.importc: "QSslSocket_encryptedBytesWritten".}
proc fQSslSocket_connect_encryptedBytesWritten(self: pointer, slot: int) {.importc: "QSslSocket_connect_encryptedBytesWritten".}
proc fcQSslSocket_preSharedKeyAuthenticationRequired(self: pointer, authenticator: pointer): void {.importc: "QSslSocket_preSharedKeyAuthenticationRequired".}
proc fQSslSocket_connect_preSharedKeyAuthenticationRequired(self: pointer, slot: int) {.importc: "QSslSocket_connect_preSharedKeyAuthenticationRequired".}
proc fcQSslSocket_newSessionTicketReceived(self: pointer, ): void {.importc: "QSslSocket_newSessionTicketReceived".}
proc fQSslSocket_connect_newSessionTicketReceived(self: pointer, slot: int) {.importc: "QSslSocket_connect_newSessionTicketReceived".}
proc fcQSslSocket_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QSslSocket_tr2".}
proc fcQSslSocket_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSslSocket_tr3".}
proc fcQSslSocket_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QSslSocket_trUtf82".}
proc fcQSslSocket_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSslSocket_trUtf83".}
proc fcQSslSocket_connectToHostEncrypted3(self: pointer, hostName: struct_miqt_string, port: cushort, mode: cint): void {.importc: "QSslSocket_connectToHostEncrypted3".}
proc fcQSslSocket_connectToHostEncrypted4(self: pointer, hostName: struct_miqt_string, port: cushort, mode: cint, protocol: cint): void {.importc: "QSslSocket_connectToHostEncrypted4".}
